--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.1",
     "react-typical": "^0.1.3",
     "rxjs": "^7.5.2",
     "web-vitals": "^2.1.4"
