--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-owl-carousel": "^2.3.3",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.1",
     "react-typical": "^0.1.3",
